Mon May 10 06:59:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (rdoc): rdoc should depend main. Moreover when XRUBY
	  is miniruby, it can run after miniruby is built.

Mon May 10 03:36:56 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (eval_string_with_cref): propagative filename and line_no
	  of binding.  [ruby-dev:38767] [ruby-core:28307]

	* vm_core.h (rb_binding_t), proc.c: add filename and line_no fields to
	  preserve them.

Mon May 10 02:29:51 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c (fiber_switch): raise FiberError when returning to dead
	  fiber.  [ruby-dev:40833]

Sun May 16 11:39:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/missing.h (signbit): add missing prototype.

Sun May 16 10:49:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): fix number of arguments.
	  a patch by Masaya TARUI <tarui AT prx.jp>.

Sun May 16 02:23:00 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* configure.in: can not load libruby.so if gcc is used with
	  --enable-shared on AIX.

Sat May 15 17:16:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (rb_iconv_sys_fail): raise BrokenLibrary if
	  errno is not set.  [ruby-dev:41317]

Thu May 13 18:20:16 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (swallow): should use more_char() instead of fill_cbuf().
	  suggested by akr.

Thu May 13 13:09:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_vm_get_sourceline): moved from eval_intern.h for
	  vm_dump.c.

Thu May 13 13:04:46 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (swallow): support text mode and UTF-16/32 as internal encoding.
	  [Bug #1576]

	* io.c (io_shift_cbuf): read and throw it away when str is NULL.

Wed May 12 16:43:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): fixed broken output including nuls.

Wed May 12 16:34:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
