@@ -1,3 +1,8 @@
+Tue May 11 01:20:43 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/parser.c (parse): Return strings encoded as
+	  Encoding.default_internal if set.
+
 Mon May 10 06:59:19 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* common.mk (rdoc): rdoc should depend main. Moreover when XRUBY
